// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pendingOrderPopup should trigger pop up for ethflow order 1`] = `
Object {
  "payload": Object {
    "id": "0x001",
    "popup": Object {
      "content": Object {
        "txn": Object {
          "hash": "0xhash",
          "success": true,
          "summary": "summary submitted",
        },
      },
      "key": "0xhash_submitted",
    },
  },
  "type": "application/addPopup",
}
`;

exports[`pendingOrderPopup should trigger pop up for regular order 1`] = `
Object {
  "payload": Object {
    "id": "0x002",
    "popup": Object {
      "content": Object {
        "metatxn": Object {
          "id": "0x002",
          "success": true,
          "summary": "summary submitted",
        },
      },
      "key": "0x002_submitted",
    },
  },
  "type": "application/addPopup",
}
`;
